# Indigo_vc_test

./: .flake8  README.md  pyproject.toml
src/cinema/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/cinema/fixtures/: test_fixtures.json
src/cinema/management/commands/: add_favourites.py  populate_movies.py  populate_users.py
src/cinema/migrations/: 0001_initial.py  0002_user_favourites.py
src/src/: settings.py  urls.py
