[tool.poetry]
name = "indigo-vc-test"
version = "0.1.0"
description = "Тестовое задание для IndigoVC"
authors = ["Павел <78384513+piligrimdev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-rest-framework = "^0.1.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
